--- a/my-dashboard/vercel.json
+++ b/my-dashboard/vercel.json
@@ -1,3 +1,5 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+    "rewrites": [{ "source": "/(.*)", "destination": "/" }],
+    "buildCommand": "next build",
+    "framework": "nextjs"
 }
